<resources>
    <string name="app_name">Puzzle Game</string>
    <string name="str_start">Start</string>
    <string name="str_difficulty">Difficulty</string>
    <string name="str_3x3">3 × 3</string>
    <string name="str_image_source">Image source</string>
    <string name="str_load_image">Load image</string>
    <string name="str_no_source">&lt;No source&gt;</string>
    <string name="str_scale_type">Fitting</string>
    <string name="str_sliding_puzzle">Sliding puzzle</string>
    <string name="str_traditional_puzzle">Traditional puzzle</string>
    <string name="str_image_processing_please_wait">Image processing, please wait&#8230;</string>
    <string name="str_check_original_image">Check original image</string>
    <string name="str_resume">Resume</string>
    <string name="str_hint">Hint</string>
    <string name="str_tapped_0">Move: 0</string>
    <string name="str_if_the_image_is_too_large_image_processing_will_take_a_long_time">If the image is too large, image processing will take a long time.</string>
    <string name="str_scaling_recommendation_because_of_high_difficulty">In high difficulty, it\'s highly recommended that you scale the image to avoid confusing pieces after the image processing, especially if the aspect ratio of your image is very large.</string>
    <string name="str_ranking_place">#</string>
    <string name="str_ranking_cost_time">Time</string>
    <string name="str_ranking_moved_count">Move</string>
    <string name="str_ranking_date">Date</string>
    <string name="str_user_check_before_delete_the_record">Are you sure you want to delete this record?</string>
    <string name="str_user_check_before_give_up_the_game">Are you sure you want to give up?</string>
    <string name="str_user_check_yes">Yes</string>
    <string name="str_user_check_no">No</string>
    <string name="str_play">Play</string>
    <string name="str_ranking">Ranking board</string>
    <string name="str_credit">Credit</string>
    <string name="str_settings">Settings</string>
    <string name="str_back_to_menu">Back to menu</string>
    <string name="str_back">Go back</string>
    <string name="str_try_again">Try again</string>
    <string name="str_please_choose_an_image">Please choose an image.</string>
    <string name="str_press_again_to_leave">Press again to leave.</string>
    <string name="str_give_up">Give up</string>
    <string name="str_show_maoudamashii">BGM &amp; SE: 魔王魂 (maoudamashii)</string>
    <string name="str_show_indices">Show indices</string>
    <string name="str_hide_indices">Hide indices</string>
    <string name="str_give_up_and_see_the_answer">Give up and see the answer</string>
</resources>
