<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RankingBoardFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="@dimen/dim_general_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- linear-layout for putting titles of ranking board -->
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtv_ranking_board_title_place"
                android:layout_marginStart="@dimen/dim_general_margin"
                android:layout_marginEnd="@dimen/dim_general_margin"
                android:text="@string/str_ranking_place"
                android:textSize="@dimen/dim_ranking_record_item_text_size"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/txtv_ranking_board_title_cost_time"
                android:layout_marginEnd="@dimen/dim_general_margin"
                android:text="@string/str_ranking_cost_time"
                android:textSize="@dimen/dim_ranking_record_item_text_size"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/txtv_ranking_board_title_moved_count"
                android:layout_marginEnd="@dimen/dim_general_margin"
                android:text="@string/str_ranking_moved_count"
                android:textSize="@dimen/dim_ranking_record_item_text_size"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/txtv_ranking_board_title_record_done_date"
                android:layout_marginEnd="@dimen/dim_general_margin"
                android:text="@string/str_ranking_date"
                android:textSize="@dimen/dim_ranking_record_item_text_size"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recv_ranking_board"
            android:layout_margin="@dimen/dim_general_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>
</FrameLayout>